<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="PregnancyPal">Pregnancy Pal</string>
    <string name="login_title">Login</string>
    <string name="logo">Logo</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log In</string>
    <string name="not_registered_sign_up">Not registered? Sign up!</string>
    <string name="signup_title">Sign Up</string>
    <string name="signup">Sign Up</string>
    <string name="already_registered_login">Already registered? Log in!</string>
    <string name="calendar">Calendar</string>
    <string name="tools">Tools</string>
    <string name="channel_name">Appointment Reminders</string>
    <string name="channel_description">Notifications for upcoming appointments</string>
    <string name="mood_tracker_title">Mood Tracker</string>
    <string name="happy">Happy</string>
    <string name="sad">Sad</string>
    <string name="angry">Angry</string>
    <string name="excited">Excited</string>
    <string name="tired">Tired</string>
    <string name="stressed">Stressed</string>
    <string name="calm">Calm</string>
    <string name="notes">Notes...</string>
    <string name="submit">Submit</string>
    <string name="mood_icon">MoodIcon</string>
    <string name="mood">Mood</string>




</resources>